# markdown_articles_tool

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .pyre_configuration  MANIFEST.in  README.md  images_extractor.py  install_git_hooks.py  markdown_tool.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: pyre.yml  pythonapp.yml
ci/: run_tests.sh
markdown_tool/: article_processor.py
markdown_tool/formatters/: __init__.py
markdown_tool/transformers/: __init__.py  helpers.py
markdown_tool/transformers/html/: transformer.py
markdown_toolset/: article_downloader.py  article_processor.py  image_downloader.py  out_path_maker.py  string_tools.py  www_tools.py
markdown_toolset/deduplicators/: __init__.py  content_hash_dedup.py  deduplicator.py  name_hash_dedup.py
markdown_toolset/formatters/: __init__.py  docx.py  helpers.py  html.py  pdf.py  simple.py
markdown_toolset/transformers/: __init__.py  helpers.py
markdown_toolset/transformers/html/: transformer.py
pkg/: article_processor.py  image_downloader.py  www_tools.py
pkg/formatters/: __init__.py  html.py  pdf.py  simple.py
pkg/transformers/: __init__.py  helpers.py
tests/: test_article_downloader.py  test_deduplicator.py  test_image_downloader.py  test_important_links.py  test_markdown_transformer.py  test_out_path_maker.py  test_string_tools.py  test_www_tools.py
tests/data/: article.md  duplicates.md  image_mime_incorrect.md  important_links.md
tests/playground/: .gitignore  descr.md
(+4 files in other folders)
